// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ATOMIZE SHEET NATIVE, DEVELOPMENt 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "color: blue /*label[0]*/",
        ],
      },
    ],
    "~": "c",
  },
  "nativeOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 20 /*nativeOnly/$native*/",
        ],
      },
    ],
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 4 /*root*/",
          "padding: 4 /*root*/",
        ],
      },
      Object {
        "atomicArray": Array [
          "padding: 10 /*root/$native*/",
        ],
      },
    ],
    "~": "c",
  },
}
`;

exports[`ATOMIZE SHEET NATIVE, PRODUCTION 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          Object {
            "propId": "color",
            "value": "blue",
          },
        ],
      },
    ],
    "~": "c",
  },
  "nativeOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          Object {
            "propId": "margin",
            "value": 20,
          },
        ],
      },
    ],
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          Object {
            "propId": "margin",
            "value": 4,
          },
          Object {
            "propId": "padding",
            "value": 4,
          },
        ],
      },
      Object {
        "atomicArray": Array [
          Object {
            "propId": "padding",
            "value": 10,
          },
        ],
      },
    ],
    "~": "c",
  },
}
`;

exports[`ATOMIZE SHEET WEB DEVELOPMENT 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".d { color:blue /*label[0]*/ }",
        ],
      },
    ],
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".a { margin:4px /*root*/ }",
          ".b { padding:4px /*root*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          ".c { margin:10px /*root/$web*/ }",
        ],
      },
    ],
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".e { color:red /*webOnly/$web*/ }",
        ],
      },
    ],
    "~": "c",
  },
}
`;

exports[`ATOMIZE SHEET WEB PRODUCTION 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "d",
        ],
      },
    ],
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "a",
          "b",
        ],
      },
      Object {
        "atomicArray": Array [
          "c",
        ],
      },
    ],
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "e",
        ],
      },
    ],
    "~": "c",
  },
}
`;
